# project-structure

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yaml
data/output/: concatenated_excel.xlsx
docs/: index.md  load.md
load/: index.html
project_structure/: __init__.py  main.py
project_structure/pipeline/: __init__.py  extract.py  load.py  transform.py
search/: search_index.json
tests/: test_pipeline.py
