[tool.poetry]
name = "project-structure"
version = "0.1.0"
description = ""
authors = ["AndreFelippeVidal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
