[tool.poetry]
name = "project-structure"
version = "0.1.0"
description = ""
authors = ["AndreFelippeVidal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pytest = "^8.3.2"
isort = "^5.13.2"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.3"
taskipy = "^1.13.0"
mkdocs = "^1.6.0"
mkdocstrings-python = "^1.10.8"
pygments = "^2.18.0"
mkdocs-material = "^9.5.31"
pymdown-extensions = "^10.9"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = """
poetry run python project_structure/main.py
"""
kill = "kill -9 $(lsof -t -i :8000)"  # kill app on port 8000(mkdocs serve)
